--- a/templates/index.html
+++ b/templates/index.html
@@ -43,6 +43,6 @@
         // 页面配置数据
         window.pageData = {{ data | tojson | safe }};
     </script>
-    <script src="/static/js/main.js"></script>
+    <script src="/static/js/main.js?v=2"></script>
 </body>
 </html>
