--- a/templates/admin.html
+++ b/templates/admin.html
@@ -368,6 +368,6 @@
 
     <div id="toast" class="toast"></div>
 
-    <script src="/static/js/admin.js"></script>
+    <script src="/static/js/admin.js?v=3"></script>
 </body>
 </html>
